// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate AWS/GCP workloads to Azure. WHEN: migrate Lambda to Azure Functions, migrate ECS or Cloud Run to Container Apps, migration readiness report, cross-cloud migration.",
  "extractedKeywords": [
    "apps",
    "assess",
    "azure",
    "cloud",
    "container",
    "cross-cloud",
    "deploy",
    "function",
    "functions",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "readiness",
    "report",
    "when",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "azure",
  "cloud",
  "container",
  "cross-cloud",
  "deploy",
  "function",
  "functions",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "readiness",
  "report",
  "when",
  "workloads",
]
`;
